nullaway_error_C761F4F1-AFE3-407F-A465-CB53137687AD.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-beans/src/main/java/org/springframework/beans/factory/support/DefaultListableBeanFactory.java:1618: error: [NullAway] dereferenced expression candidate is @Nullable
			throw new BeanNotOfRequiredTypeException(name, type, candidate.getClass());
			                                                              ^
    (see http://t.uber.com/nullaway )
